// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes should render with one mistake 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes should render with zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
